part_3/src/modules/parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from parser.y
-----------------------------------------------------------------------------

state 239 contains 1 shift/reduce conflicts.
state 241 contains 4 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	Double -> L_doubl                                  (3)
	Char -> L_charac                                   (4)
	String -> L_quoted                                 (5)
	BeginKW -> 'begin'                                 (6)
	EndKW -> 'end'                                     (7)
	ProgramKW -> 'program'                             (8)
	FunctionKW -> 'function'                           (9)
	ProcedureKW -> 'procedure'                         (10)
	ForwardKW -> 'forward'                             (11)
	VarKW -> 'var'                                     (12)
	ConstKW -> 'const'                                 (13)
	IfKW -> 'if'                                       (14)
	ThenKW -> 'then'                                   (15)
	ElseKW -> 'else'                                   (16)
	WhileKW -> 'while'                                 (17)
	ForKW -> 'for'                                     (18)
	ToKW -> 'to'                                       (19)
	DoKW -> 'do'                                       (20)
	RepeatKW -> 'repeat'                               (21)
	UntilKW -> 'until'                                 (22)
	IntKW -> 'integer'                                 (23)
	RealKW -> 'real'                                   (24)
	CharKW -> 'char'                                   (25)
	BoolKW -> 'boolean'                                (26)
	StringKW -> 'string'                               (27)
	ArrayKW -> 'array'                                 (28)
	Program -> ProgramKW Ident ';' BlockWithDecl '.'   (29)
	BlockWithDecl -> ListDeclaration BlockExec         (30)
	ListDeclaration ->                                 (31)
	ListDeclaration -> ListDeclaration Declaration     (32)
	BlockExec -> BeginKW NonMandatoryTerminator ListStatement EndKW   (33)
	ListStatement ->                                   (34)
	ListStatement -> Statement                         (35)
	ListStatement -> Statement ';' ListStatement       (36)
	NonMandatoryTerminator ->                          (37)
	NonMandatoryTerminator -> ';'                      (38)
	Declaration -> CostantsBlock                       (39)
	Declaration -> VariablesBlock                      (40)
	Declaration -> FunctionForw                        (41)
	Declaration -> ProcedureForw                       (42)
	Declaration -> FunctionDecl                        (43)
	Declaration -> ProcedureDecl                       (44)
	CostantsBlock -> ConstKW ListConstantDecl          (45)
	ListConstantDecl -> ConstantDecl ';'               (46)
	ListConstantDecl -> ConstantDecl ';' ListConstantDecl   (47)
	ConstantDecl -> Ident '=' RightExp                 (48)
	VariablesBlock -> VarKW ListVariableDeclBlock      (49)
	ListVariableDeclBlock -> VariableDeclBlock ';'     (50)
	ListVariableDeclBlock -> VariableDeclBlock ';' ListVariableDeclBlock   (51)
	ListVariableDeclFunc ->                            (52)
	ListVariableDeclFunc -> VariableDeclFunc           (53)
	ListVariableDeclFunc -> VariableDeclFunc ';' ListVariableDeclFunc   (54)
	VariableDeclBlock -> ListIdent ':' Type InitAssign   (55)
	InitAssign ->                                      (56)
	InitAssign -> '=' RightExp                         (57)
	DeclarationFunc ->                                 (58)
	DeclarationFunc -> '(' ListVariableDeclFunc ')'    (59)
	VariableDeclFunc -> ListIdent ':' Type             (60)
	ListIdent -> Ident                                 (61)
	ListIdent -> Ident ',' ListIdent                   (62)
	FunctionSign -> FunctionKW Ident DeclarationFunc ':' Type ';'   (63)
	ProcedureSign -> ProcedureKW Ident DeclarationFunc ';'   (64)
	FunctionDecl -> FunctionSign BlockWithDecl ';'     (65)
	ProcedureDecl -> ProcedureSign BlockWithDecl ';'   (66)
	FunctionForw -> FunctionSign ForwardKW ';'         (67)
	ProcedureForw -> ProcedureSign ForwardKW ';'       (68)
	FunctionCall -> Ident '(' ListRightExp ')'         (69)
	ProcedureCall -> Ident '(' ListRightExp ')'        (70)
	ListRightExp ->                                    (71)
	ListRightExp -> RightExp                           (72)
	ListRightExp -> RightExp ',' ListRightExp          (73)
	Statement -> BlockExec                             (74)
	Statement -> IfKW RightExp ThenKW Statement ElseBlock   (75)
	Statement -> ForKW Assign ToKW RightExp DoKW Statement   (76)
	Statement -> WhileKW RightExp DoKW Statement       (77)
	Statement -> RepeatKW ListStatement UntilKW RightExp   (78)
	Statement -> Assign                                (79)
	Statement -> FunctionCall                          (80)
	Statement -> ProcedureCall                         (81)
	Statement -> WritePrimitive                        (82)
	Statement -> ReadPrimitive                         (83)
	ElseBlock ->                                       (84)
	ElseBlock -> ElseKW Statement                      (85)
	Assign -> LeftExp ':=' RightExp                    (86)
	RightExp -> RightExp1                              (87)
	RightExp -> RightExp 'or' RightExp1                (88)
	RightExp1 -> RightExp2                             (89)
	RightExp1 -> RightExp1 'and' RightExp2             (90)
	RightExp2 -> RightExp3                             (91)
	RightExp2 -> RightExp2 '>' RightExp3               (92)
	RightExp2 -> RightExp2 '<' RightExp3               (93)
	RightExp2 -> RightExp2 '>=' RightExp3              (94)
	RightExp2 -> RightExp2 '<=' RightExp3              (95)
	RightExp2 -> RightExp2 '=' RightExp3               (96)
	RightExp3 -> RightExp4                             (97)
	RightExp3 -> RightExp3 '+' RightExp4               (98)
	RightExp3 -> RightExp3 '-' RightExp4               (99)
	RightExp4 -> RightExp5                             (100)
	RightExp4 -> RightExp4 '*' RightExp5               (101)
	RightExp4 -> RightExp4 '/' RightExp5               (102)
	RightExp4 -> RightExp4 'mod' RightExp5             (103)
	RightExp4 -> RightExp4 'div' RightExp5             (104)
	RightExp5 -> RightExp6                             (105)
	RightExp5 -> RightExp5 '**' RightExp6              (106)
	RightExp6 -> RightExp7                             (107)
	RightExp6 -> 'not' RightExp7                       (108)
	RightExp6 -> '-' RightExp7                         (109)
	RightExp6 -> '+' RightExp7                         (110)
	RightExp7 -> '(' RightExp ')'                      (111)
	RightExp7 -> Integer                               (112)
	RightExp7 -> Double                                (113)
	RightExp7 -> Boolean                               (114)
	RightExp7 -> Char                                  (115)
	RightExp7 -> String                                (116)
	RightExp7 -> FunctionCall                          (117)
	RightExp7 -> LeftExp                               (118)
	LeftExp -> Ident                                   (119)
	LeftExp -> LeftExp '[' ListRightExp ']'            (120)
	LeftExp -> LeftExp '^'                             (121)
	LeftExp -> LeftExp '@'                             (122)
	Type -> BaseType                                   (123)
	Type -> CompositeType                              (124)
	BaseType -> IntKW                                  (125)
	BaseType -> RealKW                                 (126)
	BaseType -> CharKW                                 (127)
	BaseType -> BoolKW                                 (128)
	BaseType -> StringKW                               (129)
	Boolean -> 'true'                                  (130)
	Boolean -> 'false'                                 (131)
	CompositeType -> ArrayKW '[' ListArrayDeclarationDim ']' 'of' BaseType   (132)
	CompositeType -> '^' Type                          (133)
	ListArrayDeclarationDim ->                         (134)
	ListArrayDeclarationDim -> ArrayDeclarationDim     (135)
	ListArrayDeclarationDim -> ArrayDeclarationDim ',' ListArrayDeclarationDim   (136)
	ArrayDeclarationDim -> RightExp '..' RightExp      (137)
	WritePrimitive -> 'writeInt' '(' RightExp ')'      (138)
	WritePrimitive -> 'writeReal' '(' RightExp ')'     (139)
	WritePrimitive -> 'writeChar' '(' RightExp ')'     (140)
	WritePrimitive -> 'writeString' '(' RightExp ')'   (141)
	ReadPrimitive -> 'readInt' '(' LeftExp ')'         (142)
	ReadPrimitive -> 'readReal' '(' LeftExp ')'        (143)
	ReadPrimitive -> 'readChar' '(' LeftExp ')'        (144)
	ReadPrimitive -> 'readString' '(' LeftExp ')'      (145)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'**'           { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	'.'            { PT _ (TS _ 8) }
	'..'           { PT _ (TS _ 9) }
	'/'            { PT _ (TS _ 10) }
	':'            { PT _ (TS _ 11) }
	':='           { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'@'            { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'^'            { PT _ (TS _ 22) }
	'and'          { PT _ (TS _ 23) }
	'array'        { PT _ (TS _ 24) }
	'begin'        { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'char'         { PT _ (TS _ 27) }
	'const'        { PT _ (TS _ 28) }
	'div'          { PT _ (TS _ 29) }
	'do'           { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'end'          { PT _ (TS _ 32) }
	'false'        { PT _ (TS _ 33) }
	'for'          { PT _ (TS _ 34) }
	'forward'      { PT _ (TS _ 35) }
	'function'     { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'integer'      { PT _ (TS _ 38) }
	'mod'          { PT _ (TS _ 39) }
	'not'          { PT _ (TS _ 40) }
	'of'           { PT _ (TS _ 41) }
	'or'           { PT _ (TS _ 42) }
	'procedure'    { PT _ (TS _ 43) }
	'program'      { PT _ (TS _ 44) }
	'readChar'     { PT _ (TS _ 45) }
	'readInt'      { PT _ (TS _ 46) }
	'readReal'     { PT _ (TS _ 47) }
	'readString'   { PT _ (TS _ 48) }
	'real'         { PT _ (TS _ 49) }
	'repeat'       { PT _ (TS _ 50) }
	'string'       { PT _ (TS _ 51) }
	'then'         { PT _ (TS _ 52) }
	'to'           { PT _ (TS _ 53) }
	'true'         { PT _ (TS _ 54) }
	'until'        { PT _ (TS _ 55) }
	'var'          { PT _ (TS _ 56) }
	'while'        { PT _ (TS _ 57) }
	'writeChar'    { PT _ (TS _ 58) }
	'writeInt'     { PT _ (TS _ 59) }
	'writeReal'    { PT _ (TS _ 60) }
	'writeString'  { PT _ (TS _ 61) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	Double          rule  3
	Char            rule  4
	String          rule  5
	BeginKW         rule  6
	EndKW           rule  7
	ProgramKW       rule  8
	FunctionKW      rule  9
	ProcedureKW     rule  10
	ForwardKW       rule  11
	VarKW           rule  12
	ConstKW         rule  13
	IfKW            rule  14
	ThenKW          rule  15
	ElseKW          rule  16
	WhileKW         rule  17
	ForKW           rule  18
	ToKW            rule  19
	DoKW            rule  20
	RepeatKW        rule  21
	UntilKW         rule  22
	IntKW           rule  23
	RealKW          rule  24
	CharKW          rule  25
	BoolKW          rule  26
	StringKW        rule  27
	ArrayKW         rule  28
	Program         rule  29
	BlockWithDecl   rule  30
	ListDeclaration rules 31, 32
	BlockExec       rule  33
	ListStatement   rules 34, 35, 36
	NonMandatoryTerminator rules 37, 38
	Declaration     rules 39, 40, 41, 42, 43, 44
	CostantsBlock   rule  45
	ListConstantDecl rules 46, 47
	ConstantDecl    rule  48
	VariablesBlock  rule  49
	ListVariableDeclBlock rules 50, 51
	ListVariableDeclFunc rules 52, 53, 54
	VariableDeclBlock rule  55
	InitAssign      rules 56, 57
	DeclarationFunc rules 58, 59
	VariableDeclFunc rule  60
	ListIdent       rules 61, 62
	FunctionSign    rule  63
	ProcedureSign   rule  64
	FunctionDecl    rule  65
	ProcedureDecl   rule  66
	FunctionForw    rule  67
	ProcedureForw   rule  68
	FunctionCall    rule  69
	ProcedureCall   rule  70
	ListRightExp    rules 71, 72, 73
	Statement       rules 74, 75, 76, 77, 78, 79, 80, 81, 82, 83
	ElseBlock       rules 84, 85
	Assign          rule  86
	RightExp        rules 87, 88
	RightExp1       rules 89, 90
	RightExp2       rules 91, 92, 93, 94, 95, 96
	RightExp3       rules 97, 98, 99
	RightExp4       rules 100, 101, 102, 103, 104
	RightExp5       rules 105, 106
	RightExp6       rules 107, 108, 109, 110
	RightExp7       rules 111, 112, 113, 114, 115, 116, 117, 118
	LeftExp         rules 119, 120, 121, 122
	Type            rules 123, 124
	BaseType        rules 125, 126, 127, 128, 129
	Boolean         rules 130, 131
	CompositeType   rules 132, 133
	ListArrayDeclarationDim rules 134, 135, 136
	ArrayDeclarationDim rule  137
	WritePrimitive  rules 138, 139, 140, 141
	ReadPrimitive   rules 142, 143, 144, 145

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'program'      shift, and enter state 5

	ProgramKW      goto state 3
	Program        goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'**'           reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'@'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'and'          reduce using rule 1
	'div'          reduce using rule 1
	'do'           reduce using rule 1
	'else'         reduce using rule 1
	'end'          reduce using rule 1
	'mod'          reduce using rule 1
	'or'           reduce using rule 1
	'then'         reduce using rule 1
	'to'           reduce using rule 1
	'until'        reduce using rule 1


State 3

	Program -> ProgramKW . Ident ';' BlockWithDecl '.'    (rule 29)

	L_ident        shift, and enter state 2

	Ident          goto state 6

State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ProgramKW -> 'program' .                            (rule 8)

	L_ident        reduce using rule 8


State 6

	Program -> ProgramKW Ident . ';' BlockWithDecl '.'    (rule 29)

	';'            shift, and enter state 7


State 7

	Program -> ProgramKW Ident ';' . BlockWithDecl '.'    (rule 29)

	'begin'        reduce using rule 31
	'const'        reduce using rule 31
	'function'     reduce using rule 31
	'procedure'    reduce using rule 31
	'var'          reduce using rule 31

	BlockWithDecl  goto state 8
	ListDeclarationgoto state 9

State 8

	Program -> ProgramKW Ident ';' BlockWithDecl . '.'    (rule 29)

	'.'            shift, and enter state 30


State 9

	BlockWithDecl -> ListDeclaration . BlockExec        (rule 30)
	ListDeclaration -> ListDeclaration . Declaration    (rule 32)

	'begin'        shift, and enter state 25
	'const'        shift, and enter state 26
	'function'     shift, and enter state 27
	'procedure'    shift, and enter state 28
	'var'          shift, and enter state 29

	BeginKW        goto state 10
	FunctionKW     goto state 11
	ProcedureKW    goto state 12
	VarKW          goto state 13
	ConstKW        goto state 14
	BlockExec      goto state 15
	Declaration    goto state 16
	CostantsBlock  goto state 17
	VariablesBlock goto state 18
	FunctionSign   goto state 19
	ProcedureSign  goto state 20
	FunctionDecl   goto state 21
	ProcedureDecl  goto state 22
	FunctionForw   goto state 23
	ProcedureForw  goto state 24

State 10

	BlockExec -> BeginKW . NonMandatoryTerminator ListStatement EndKW    (rule 33)

	';'            shift, and enter state 46
	'begin'        reduce using rule 37
	'end'          reduce using rule 37
	'for'          reduce using rule 37
	'if'           reduce using rule 37
	'readChar'     reduce using rule 37
	'readInt'      reduce using rule 37
	'readReal'     reduce using rule 37
	'readString'   reduce using rule 37
	'repeat'       reduce using rule 37
	'while'        reduce using rule 37
	'writeChar'    reduce using rule 37
	'writeInt'     reduce using rule 37
	'writeReal'    reduce using rule 37
	'writeString'  reduce using rule 37
	L_ident        reduce using rule 37

	NonMandatoryTerminatorgoto state 45

State 11

	FunctionSign -> FunctionKW . Ident DeclarationFunc ':' Type ';'    (rule 63)

	L_ident        shift, and enter state 2

	Ident          goto state 44

State 12

	ProcedureSign -> ProcedureKW . Ident DeclarationFunc ';'    (rule 64)

	L_ident        shift, and enter state 2

	Ident          goto state 43

State 13

	VariablesBlock -> VarKW . ListVariableDeclBlock     (rule 49)

	L_ident        shift, and enter state 2

	Ident          goto state 39
	ListVariableDeclBlockgoto state 40
	VariableDeclBlockgoto state 41
	ListIdent      goto state 42

State 14

	CostantsBlock -> ConstKW . ListConstantDecl         (rule 45)

	L_ident        shift, and enter state 2

	Ident          goto state 36
	ListConstantDeclgoto state 37
	ConstantDecl   goto state 38

State 15

	BlockWithDecl -> ListDeclaration BlockExec .        (rule 30)

	'.'            reduce using rule 30
	';'            reduce using rule 30


State 16

	ListDeclaration -> ListDeclaration Declaration .    (rule 32)

	'begin'        reduce using rule 32
	'const'        reduce using rule 32
	'function'     reduce using rule 32
	'procedure'    reduce using rule 32
	'var'          reduce using rule 32


State 17

	Declaration -> CostantsBlock .                      (rule 39)

	'begin'        reduce using rule 39
	'const'        reduce using rule 39
	'function'     reduce using rule 39
	'procedure'    reduce using rule 39
	'var'          reduce using rule 39


State 18

	Declaration -> VariablesBlock .                     (rule 40)

	'begin'        reduce using rule 40
	'const'        reduce using rule 40
	'function'     reduce using rule 40
	'procedure'    reduce using rule 40
	'var'          reduce using rule 40


State 19

	FunctionDecl -> FunctionSign . BlockWithDecl ';'    (rule 65)
	FunctionForw -> FunctionSign . ForwardKW ';'        (rule 67)

	'begin'        reduce using rule 31
	'const'        reduce using rule 31
	'forward'      shift, and enter state 33
	'function'     reduce using rule 31
	'procedure'    reduce using rule 31
	'var'          reduce using rule 31

	ForwardKW      goto state 34
	BlockWithDecl  goto state 35
	ListDeclarationgoto state 9

State 20

	ProcedureDecl -> ProcedureSign . BlockWithDecl ';'    (rule 66)
	ProcedureForw -> ProcedureSign . ForwardKW ';'      (rule 68)

	'begin'        reduce using rule 31
	'const'        reduce using rule 31
	'forward'      shift, and enter state 33
	'function'     reduce using rule 31
	'procedure'    reduce using rule 31
	'var'          reduce using rule 31

	ForwardKW      goto state 31
	BlockWithDecl  goto state 32
	ListDeclarationgoto state 9

State 21

	Declaration -> FunctionDecl .                       (rule 43)

	'begin'        reduce using rule 43
	'const'        reduce using rule 43
	'function'     reduce using rule 43
	'procedure'    reduce using rule 43
	'var'          reduce using rule 43


State 22

	Declaration -> ProcedureDecl .                      (rule 44)

	'begin'        reduce using rule 44
	'const'        reduce using rule 44
	'function'     reduce using rule 44
	'procedure'    reduce using rule 44
	'var'          reduce using rule 44


State 23

	Declaration -> FunctionForw .                       (rule 41)

	'begin'        reduce using rule 41
	'const'        reduce using rule 41
	'function'     reduce using rule 41
	'procedure'    reduce using rule 41
	'var'          reduce using rule 41


State 24

	Declaration -> ProcedureForw .                      (rule 42)

	'begin'        reduce using rule 42
	'const'        reduce using rule 42
	'function'     reduce using rule 42
	'procedure'    reduce using rule 42
	'var'          reduce using rule 42


State 25

	BeginKW -> 'begin' .                                (rule 6)

	';'            reduce using rule 6
	'begin'        reduce using rule 6
	'end'          reduce using rule 6
	'for'          reduce using rule 6
	'if'           reduce using rule 6
	'readChar'     reduce using rule 6
	'readInt'      reduce using rule 6
	'readReal'     reduce using rule 6
	'readString'   reduce using rule 6
	'repeat'       reduce using rule 6
	'while'        reduce using rule 6
	'writeChar'    reduce using rule 6
	'writeInt'     reduce using rule 6
	'writeReal'    reduce using rule 6
	'writeString'  reduce using rule 6
	L_ident        reduce using rule 6


State 26

	ConstKW -> 'const' .                                (rule 13)

	L_ident        reduce using rule 13


State 27

	FunctionKW -> 'function' .                          (rule 9)

	L_ident        reduce using rule 9


State 28

	ProcedureKW -> 'procedure' .                        (rule 10)

	L_ident        reduce using rule 10


State 29

	VarKW -> 'var' .                                    (rule 12)

	L_ident        reduce using rule 12


State 30

	Program -> ProgramKW Ident ';' BlockWithDecl '.' .    (rule 29)

	%eof           reduce using rule 29


State 31

	ProcedureForw -> ProcedureSign ForwardKW . ';'      (rule 68)

	';'            shift, and enter state 84


State 32

	ProcedureDecl -> ProcedureSign BlockWithDecl . ';'    (rule 66)

	';'            shift, and enter state 83


State 33

	ForwardKW -> 'forward' .                            (rule 11)

	';'            reduce using rule 11


State 34

	FunctionForw -> FunctionSign ForwardKW . ';'        (rule 67)

	';'            shift, and enter state 82


State 35

	FunctionDecl -> FunctionSign BlockWithDecl . ';'    (rule 65)

	';'            shift, and enter state 81


State 36

	ConstantDecl -> Ident . '=' RightExp                (rule 48)

	'='            shift, and enter state 80


State 37

	CostantsBlock -> ConstKW ListConstantDecl .         (rule 45)

	'begin'        reduce using rule 45
	'const'        reduce using rule 45
	'function'     reduce using rule 45
	'procedure'    reduce using rule 45
	'var'          reduce using rule 45


State 38

	ListConstantDecl -> ConstantDecl . ';'              (rule 46)
	ListConstantDecl -> ConstantDecl . ';' ListConstantDecl    (rule 47)

	';'            shift, and enter state 79


State 39

	ListIdent -> Ident .                                (rule 61)
	ListIdent -> Ident . ',' ListIdent                  (rule 62)

	','            shift, and enter state 78
	':'            reduce using rule 61


State 40

	VariablesBlock -> VarKW ListVariableDeclBlock .     (rule 49)

	'begin'        reduce using rule 49
	'const'        reduce using rule 49
	'function'     reduce using rule 49
	'procedure'    reduce using rule 49
	'var'          reduce using rule 49


State 41

	ListVariableDeclBlock -> VariableDeclBlock . ';'    (rule 50)
	ListVariableDeclBlock -> VariableDeclBlock . ';' ListVariableDeclBlock    (rule 51)

	';'            shift, and enter state 77


State 42

	VariableDeclBlock -> ListIdent . ':' Type InitAssign    (rule 55)

	':'            shift, and enter state 76


State 43

	ProcedureSign -> ProcedureKW Ident . DeclarationFunc ';'    (rule 64)

	'('            shift, and enter state 74
	';'            reduce using rule 58

	DeclarationFuncgoto state 75

State 44

	FunctionSign -> FunctionKW Ident . DeclarationFunc ':' Type ';'    (rule 63)

	'('            shift, and enter state 74
	':'            reduce using rule 58

	DeclarationFuncgoto state 73

State 45

	BlockExec -> BeginKW NonMandatoryTerminator . ListStatement EndKW    (rule 33)

	'begin'        shift, and enter state 25
	'end'          reduce using rule 34
	'for'          shift, and enter state 61
	'if'           shift, and enter state 62
	'readChar'     shift, and enter state 63
	'readInt'      shift, and enter state 64
	'readReal'     shift, and enter state 65
	'readString'   shift, and enter state 66
	'repeat'       shift, and enter state 67
	'while'        shift, and enter state 68
	'writeChar'    shift, and enter state 69
	'writeInt'     shift, and enter state 70
	'writeReal'    shift, and enter state 71
	'writeString'  shift, and enter state 72
	L_ident        shift, and enter state 2

	Ident          goto state 47
	BeginKW        goto state 10
	IfKW           goto state 48
	WhileKW        goto state 49
	ForKW          goto state 50
	RepeatKW       goto state 51
	BlockExec      goto state 52
	ListStatement  goto state 53
	FunctionCall   goto state 54
	ProcedureCall  goto state 55
	Statement      goto state 56
	Assign         goto state 57
	LeftExp        goto state 58
	WritePrimitive goto state 59
	ReadPrimitive  goto state 60

State 46

	NonMandatoryTerminator -> ';' .                     (rule 38)

	'begin'        reduce using rule 38
	'end'          reduce using rule 38
	'for'          reduce using rule 38
	'if'           reduce using rule 38
	'readChar'     reduce using rule 38
	'readInt'      reduce using rule 38
	'readReal'     reduce using rule 38
	'readString'   reduce using rule 38
	'repeat'       reduce using rule 38
	'while'        reduce using rule 38
	'writeChar'    reduce using rule 38
	'writeInt'     reduce using rule 38
	'writeReal'    reduce using rule 38
	'writeString'  reduce using rule 38
	L_ident        reduce using rule 38


State 47

	FunctionCall -> Ident . '(' ListRightExp ')'        (rule 69)
	ProcedureCall -> Ident . '(' ListRightExp ')'       (rule 70)
	LeftExp -> Ident .                                  (rule 119)

	'('            shift, and enter state 155
	':='           reduce using rule 119
	'@'            reduce using rule 119
	'['            reduce using rule 119
	'^'            reduce using rule 119


State 48

	Statement -> IfKW . RightExp ThenKW Statement ElseBlock    (rule 75)

	'('            shift, and enter state 101
	'+'            shift, and enter state 102
	'-'            shift, and enter state 103
	'false'        shift, and enter state 104
	'not'          shift, and enter state 105
	'true'         shift, and enter state 106
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 107
	L_doubl        shift, and enter state 108
	L_charac       shift, and enter state 109
	L_quoted       shift, and enter state 110

	Ident          goto state 85
	Integer        goto state 86
	Double         goto state 87
	Char           goto state 88
	String         goto state 89
	FunctionCall   goto state 90
	RightExp       goto state 154
	RightExp1      goto state 92
	RightExp2      goto state 93
	RightExp3      goto state 94
	RightExp4      goto state 95
	RightExp5      goto state 96
	RightExp6      goto state 97
	RightExp7      goto state 98
	LeftExp        goto state 99
	Boolean        goto state 100

State 49

	Statement -> WhileKW . RightExp DoKW Statement      (rule 77)

	'('            shift, and enter state 101
	'+'            shift, and enter state 102
	'-'            shift, and enter state 103
	'false'        shift, and enter state 104
	'not'          shift, and enter state 105
	'true'         shift, and enter state 106
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 107
	L_doubl        shift, and enter state 108
	L_charac       shift, and enter state 109
	L_quoted       shift, and enter state 110

	Ident          goto state 85
	Integer        goto state 86
	Double         goto state 87
	Char           goto state 88
	String         goto state 89
	FunctionCall   goto state 90
	RightExp       goto state 153
	RightExp1      goto state 92
	RightExp2      goto state 93
	RightExp3      goto state 94
	RightExp4      goto state 95
	RightExp5      goto state 96
	RightExp6      goto state 97
	RightExp7      goto state 98
	LeftExp        goto state 99
	Boolean        goto state 100

State 50

	Statement -> ForKW . Assign ToKW RightExp DoKW Statement    (rule 76)

	L_ident        shift, and enter state 2

	Ident          goto state 151
	Assign         goto state 152
	LeftExp        goto state 58

State 51

	Statement -> RepeatKW . ListStatement UntilKW RightExp    (rule 78)

	'begin'        shift, and enter state 25
	'for'          shift, and enter state 61
	'if'           shift, and enter state 62
	'readChar'     shift, and enter state 63
	'readInt'      shift, and enter state 64
	'readReal'     shift, and enter state 65
	'readString'   shift, and enter state 66
	'repeat'       shift, and enter state 67
	'until'        reduce using rule 34
	'while'        shift, and enter state 68
	'writeChar'    shift, and enter state 69
	'writeInt'     shift, and enter state 70
	'writeReal'    shift, and enter state 71
	'writeString'  shift, and enter state 72
	L_ident        shift, and enter state 2

	Ident          goto state 47
	BeginKW        goto state 10
	IfKW           goto state 48
	WhileKW        goto state 49
	ForKW          goto state 50
	RepeatKW       goto state 51
	BlockExec      goto state 52
	ListStatement  goto state 150
	FunctionCall   goto state 54
	ProcedureCall  goto state 55
	Statement      goto state 56
	Assign         goto state 57
	LeftExp        goto state 58
	WritePrimitive goto state 59
	ReadPrimitive  goto state 60

State 52

	Statement -> BlockExec .                            (rule 74)

	';'            reduce using rule 74
	'else'         reduce using rule 74
	'end'          reduce using rule 74
	'until'        reduce using rule 74


State 53

	BlockExec -> BeginKW NonMandatoryTerminator ListStatement . EndKW    (rule 33)

	'end'          shift, and enter state 149

	EndKW          goto state 148

State 54

	Statement -> FunctionCall .                         (rule 80)

	';'            reduce using rule 80
	'else'         reduce using rule 80
	'end'          reduce using rule 80
	'until'        reduce using rule 80


State 55

	Statement -> ProcedureCall .                        (rule 81)

	';'            reduce using rule 81
	'else'         reduce using rule 81
	'end'          reduce using rule 81
	'until'        reduce using rule 81


State 56

	ListStatement -> Statement .                        (rule 35)
	ListStatement -> Statement . ';' ListStatement      (rule 36)

	';'            shift, and enter state 147
	'end'          reduce using rule 35
	'until'        reduce using rule 35


State 57

	Statement -> Assign .                               (rule 79)

	';'            reduce using rule 79
	'else'         reduce using rule 79
	'end'          reduce using rule 79
	'until'        reduce using rule 79


State 58

	Assign -> LeftExp . ':=' RightExp                   (rule 86)
	LeftExp -> LeftExp . '[' ListRightExp ']'           (rule 120)
	LeftExp -> LeftExp . '^'                            (rule 121)
	LeftExp -> LeftExp . '@'                            (rule 122)

	':='           shift, and enter state 143
	'@'            shift, and enter state 144
	'['            shift, and enter state 145
	'^'            shift, and enter state 146


State 59

	Statement -> WritePrimitive .                       (rule 82)

	';'            reduce using rule 82
	'else'         reduce using rule 82
	'end'          reduce using rule 82
	'until'        reduce using rule 82


State 60

	Statement -> ReadPrimitive .                        (rule 83)

	';'            reduce using rule 83
	'else'         reduce using rule 83
	'end'          reduce using rule 83
	'until'        reduce using rule 83


State 61

	ForKW -> 'for' .                                    (rule 18)

	L_ident        reduce using rule 18


State 62

	IfKW -> 'if' .                                      (rule 14)

	'('            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'false'        reduce using rule 14
	'not'          reduce using rule 14
	'true'         reduce using rule 14
	L_ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_doubl        reduce using rule 14
	L_charac       reduce using rule 14
	L_quoted       reduce using rule 14


State 63

	ReadPrimitive -> 'readChar' . '(' LeftExp ')'       (rule 144)

	'('            shift, and enter state 142


State 64

	ReadPrimitive -> 'readInt' . '(' LeftExp ')'        (rule 142)

	'('            shift, and enter state 141


State 65

	ReadPrimitive -> 'readReal' . '(' LeftExp ')'       (rule 143)

	'('            shift, and enter state 140


State 66

	ReadPrimitive -> 'readString' . '(' LeftExp ')'     (rule 145)

	'('            shift, and enter state 139


State 67

	RepeatKW -> 'repeat' .                              (rule 21)

	'begin'        reduce using rule 21
	'for'          reduce using rule 21
	'if'           reduce using rule 21
	'readChar'     reduce using rule 21
	'readInt'      reduce using rule 21
	'readReal'     reduce using rule 21
	'readString'   reduce using rule 21
	'repeat'       reduce using rule 21
	'until'        reduce using rule 21
	'while'        reduce using rule 21
	'writeChar'    reduce using rule 21
	'writeInt'     reduce using rule 21
	'writeReal'    reduce using rule 21
	'writeString'  reduce using rule 21
	L_ident        reduce using rule 21


State 68

	WhileKW -> 'while' .                                (rule 17)

	'('            reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'false'        reduce using rule 17
	'not'          reduce using rule 17
	'true'         reduce using rule 17
	L_ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_doubl        reduce using rule 17
	L_charac       reduce using rule 17
	L_quoted       reduce using rule 17


State 69

	WritePrimitive -> 'writeChar' . '(' RightExp ')'    (rule 140)

	'('            shift, and enter state 138


State 70

	WritePrimitive -> 'writeInt' . '(' RightExp ')'     (rule 138)

	'('            shift, and enter state 137


State 71
